Layout Tests: fix race between leak detection and browser-side navigation

When the test navigates around the time testRunner.notifyDone is called,
we might end up sending request for navigation to the browser process.

Meanwhile, layout test harness navigates to about:blank and starts leak
detection. If browser side navigation returns to the renderer with actual
navigation after about:blank has been loaded, but before leak detection
did finish, we report leaked documents, nodes, etc.

To fix this race, we can call WebContents::Stop before asking renderer
to reset and prepare for leak detection. This will cancel any potential
navigation requests left over from the test.

Bug: 833609
Change-Id: I845c4c2b16fa0805696efae5a8a95a548b988e33
Reviewed-on: https://chromium-review.googlesource.com/1015221
Reviewed-by: vmpstr <vmpstr@chromium.org>
Reviewed-by: Yuzu Saijo <yuzus@chromium.org>
Commit-Queue: Dmitry Gozman <dgozman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551882}
Former-commit-id: 9dbe74cf985f307fc28f93ee6e4fa744b752c141